# NPS-Prediction-Challenge

./: .env.example  .gitignore  LICENSE  Makefile  Makefile.bak  README.md  gitignore  pyproject.toml  requirements.txt  requirements.txt.bak
app/: main.py
app/components/: __init__.py  data_loaders.py  plots.py  styling.py
app/pages/: 1_🎯_Scorer_Client.py  2_📊_Ciblage_Cohorte.py  3_⚖️_Equite_Modele.py  4_📖_A_Propos.py  5_📈_Monitoring.py
colab/: colab_generate_verbatims.ipynb
notebooks/: 01_eda.ipynb  02_target_and_dataset.ipynb  03_splits.ipynb  04_features.ipynb  05_verbatims_inspection.ipynb  06_baselines.ipynb  07_tuning.ipynb  07_tuning_.ipynb  08_hybrid.ipynb  08_hybrid__.ipynb  09_final_eval.ipynb  09_final_eval__.ipynb  10_interpretation.ipynb  10_interpretation__.ipynb  11_fairness.ipynb  11_fairness__.ipynb  13_monitoring.ipynb  13_monitoring_.ipynb
reports/: fairness_audit.md  final_eval_report.md  leakage_audit.csv  phase13_monitoring_spec.md
scripts/: download_data.sh
src/: config.py
src/data/: audit_leaks.py  build_dataset.py  load.py  split.py  target.py
src/evaluation/: bootstrap.py  calibration.py  final_eval.py  metrics.py  plots.py
src/fairness/: audit.py  bootstrap_per_group.py  metrics.py
src/features/: build.py  derive.py  embeddings.py  pipeline.py
src/inference/: __init__.py  batch_score.py
tests/: test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_setup.py
(+18 files in other folders)
